[360939] Improve API for the different similarity caches